analyzer/tests/snapshots/errors__not_in_scope.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: cannot find value `y` in this scope
  ┌─ tests/fixtures/errors/not_in_scope.fe:8:16
  │
8 │         return y
  │                ^ undefined


